[gd_scene load_steps=2 format=3 uid="uid://ri3yyocwpwbe"]

[ext_resource type="Script" uid="uid://cxeyudn2jw3he" path="res://game/ui/info_ui.gd" id="1_dfqk4"]

[node name="Money counter" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -9.15527e-05
offset_top = -1.0
offset_right = -1151.0
offset_bottom = -678.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.654822, 0.37285)
script = ExtResource("1_dfqk4")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="MoneyText" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 2
theme_override_font_sizes/font_size = 30
text = "Money: $100"
vertical_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="SpeedText" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 2
theme_override_font_sizes/font_size = 30
text = "Speed: 1000"
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="AirtimeText" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 2
theme_override_font_sizes/font_size = 30
text = "Air Time: 5.0 s"
vertical_alignment = 1
